[Features] Added new package and frameworks

--- a/src/containers/app/App.css
+++ b/src/containers/app/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  width: 100%;
 }
 
 .App-logo {
@@ -14,13 +15,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
