--- a/src/containers/home/style.scss
+++ b/src/containers/home/style.scss
@@ -1,9 +1,11 @@
 .home-container {
   height: 100vh;
+  position: relative;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url('../../assets/images/gradient-bg.jpg');
 
+  // Navbar
   nav {
     .interpunct {
       color: white !important;
@@ -16,22 +18,46 @@
 
   .content {
     height: 80%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 
-    .logo {
-      border-radius: 50%;
-      display: inline-flex;
-      align-items: center;
-      background-color: #111;
+    h4 {
+      letter-spacing: 0.1em;
+    }
+
+    // Icons
+    .icon {
+      margin: 0.5rem;
       padding: 0.5rem;
       color: #f4f4f4;
-      transition: background-c·olor 0.15s ease-in-out;
+      border-radius: 50%;
+      align-items: center;
+      display: inline-flex;
+      margin-right: 1.25rem;
       text-decoration: none;
-      margin: 0.5rem;
+      background-color: #111;
+
+      animation-duration: 1s;
+      animation-fill-mode: both;
+      animation-timing-function: ease-in-out;
+      transition: background-color 0.15s ease-in-out;
+
+      -webkit-animation-duration: 1s;
+      -webkit-animation-fill-mode: both;
+      -webkit-animation-timing-function: ease-in-out;
 
       svg {
         display: inline-block;
         height: 1.5rem;
         width: 1.5rem;
+      }
+
+      &:hover {
+        cursor: pointer;
+        animation-name: bounce;
+        -moz-animation-name: bounce;
       }
     }
 
@@ -39,5 +65,16 @@
       height: 1.5rem;
       width: 1.5rem;
     }
+  }
+
+  .footer {
+    bottom: 0;
+    width: 100%;
+    padding: 1rem;
+    font-size: 12px;
+    font-weight: 600;
+    text-align: center;
+    position: absolute;
+    letter-spacing: 0.1em;
   }
 }
