[Refractor] Restructure home page component

--- a/src/containers/home/style.scss
+++ b/src/containers/home/style.scss
@@ -11,17 +11,26 @@
       color: white !important;
     }
     a {
-      color: white !important;
       cursor: pointer;
+      color: white !important;
+      &:hover {
+        color: white !important;
+      }
     }
+  }
+
+  .active {
+    color: black !important;
   }
 
   .content {
     height: 80%;
+    color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    text-shadow: 2px 2px 2px rgba(161, 150, 150, 0.79);
 
     h4 {
       letter-spacing: 0.1em;
@@ -75,6 +84,7 @@
     font-weight: 600;
     text-align: center;
     position: absolute;
+    margin-bottom: 0.5rem;
     letter-spacing: 0.1em;
   }
 }
