--- a/src/containers/home/style.scss
+++ b/src/containers/home/style.scss
@@ -1,18 +1,29 @@
 .home-container {
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: relative;
+  background-size: cover;
+  background-attachment: fixed;
   background-repeat: no-repeat;
-  background-position: center;
-  background-image: url('../../assets/images/gradient-bg.jpg');
+  background-position: center center;
+  background-image: url('../../assets/images/gradient-rainbow.jpg');
 
   // Navbar
   nav {
+    top: 0;
+    position: absolute;
+
     .interpunct {
       color: white !important;
     }
+
     a {
       cursor: pointer;
       color: white !important;
+
       &:hover {
         color: white !important;
       }
@@ -20,20 +31,35 @@
   }
 
   .active {
-    color: black !important;
+    font: 900;
+    text-shadow: 2px 2px 2px rgba(161, 150, 150, 0.79);
+
+    &:hover {
+      color: #665e4a !important;
+    }
   }
 
   .content {
-    height: 80%;
-    color: white;
+    opacity: 0.6;
+    color: black;
     display: flex;
+    border-radius: 2rem;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    text-shadow: 2px 2px 2px rgba(161, 150, 150, 0.79);
+    background-color: white;
+    min-width: 290px;
 
     h4 {
       letter-spacing: 0.1em;
+    }
+
+    .icon--container {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
     }
 
     // Icons
@@ -44,7 +70,6 @@
       border-radius: 50%;
       align-items: center;
       display: inline-flex;
-      margin-right: 1.25rem;
       text-decoration: none;
       background-color: #111;
 
@@ -63,10 +88,16 @@
         width: 1.5rem;
       }
 
+      img {
+        min-width: 24px;
+        max-width: 24px;
+      }
+
       &:hover {
         cursor: pointer;
         animation-name: bounce;
         -moz-animation-name: bounce;
+        background: linear-gradient(45deg, #9514ce, #598bf2);
       }
     }
 
