[Feature] Building project pages

--- a/src/pages/project/style.scss
+++ b/src/pages/project/style.scss
@@ -1,6 +1,6 @@
-.work-container {
+.project-page {
   .content {
-    margin-top: 70px;
+    margin-top: 68px;
     position: absolute;
     overflow: auto;
     box-sizing: border-box;
