--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -21,3 +21,112 @@
     text-align: center;
   }
 }
+
+%active--link-dark {
+  font-weight: 700;
+  &:hover {
+    color: #665e4a;
+  }
+}
+
+.navbar--fixed {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  background-color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-color: rgba(0, 0, 0, 0.2);
+
+  nav {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+
+    a {
+      svg {
+        width: 32px;
+        height: 32px;
+        color: black;
+      }
+    }
+
+    .active {
+      @extend %active--link-dark;
+    }
+  }
+}
+
+.navbar--transparent {
+  top: 0;
+  width: 100%;
+  position: absolute;
+
+  nav {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+
+    a {
+      cursor: pointer;
+      color: white;
+
+      svg {
+        width: 32px;
+        height: 32px;
+      }
+    }
+  }
+
+  .active {
+    font-weight: 700;
+    text-shadow: 2px 2px 2px rgba(161, 150, 150, 0.79);
+    &:hover {
+      color: #665e4a;
+    }
+  }
+}
+
+.navbar--project {
+  .arco-row {
+    height: 68px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    background-color: white;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-color: rgba(0, 0, 0, 0.2);
+  }
+
+  a {
+    svg {
+      width: 32px;
+      height: 32px;
+      color: black;
+
+      &:hover {
+        opacity: 0.5;
+        transition: opacity 0.15s ease-in;
+      }
+    }
+  }
+
+  .active {
+    @extend %active--link-dark;
+  }
+}
