--- a/src/containers/design/style.scss
+++ b/src/containers/design/style.scss
@@ -1,24 +1,4 @@
 .container-design {
-  .grid-gutter-demo .arco-col {
-    height: 48px;
-    color: var(--color-white);
-  }
-
-  .grid-gutter-demo .arco-col > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-  }
-
-  .grid-gutter-demo .arco-col:nth-child(2n + 1) > div {
-    background-color: rgba(var(--arcoblue-6), 0.9);
-  }
-
-  .grid-gutter-demo .arco-col:nth-child(2n) > div {
-    background-color: var(--color-primary-light-4);
-  }
-
   .lottie--designer {
     height: 300px;
   }
@@ -35,7 +15,21 @@
   }
 
   .icon--adobe > img {
-    //  width: 60%;
-    // height: 60%;
+    width: 40px;
+    height: 40px;
+  }
+
+  .content--list {
+    display: flex;
+    flex-direction: column;
+
+    .list--cover {
+      border-radius: 1rem;
+      box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
+
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
   }
 }
