--- a/src/pages/project/style.scss
+++ b/src/pages/project/style.scss
@@ -8,5 +8,19 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+
+    .content--list {
+      margin-top: 0 !important;
+
+      span {
+        letter-spacing: 1px;
+      }
+    }
+  }
+
+  .paragraph {
+    font-size: 16px;
+    font-weight: 400;
+    color: slategray;
   }
 }
